fix: a lot of fixes