@@ -28,34 +28,30 @@ public class PesquisasDAO {
         String columnName = "ano_" + ano;
         StringBuilder sb = new StringBuilder("SELECT SUM(" + columnName + ") FROM curso_ies ci");
 
-        sb.append(" JOIN cidade cid ON ci.id_cidade = cid.id_cidade");
+        if (estado != null && !estado.isEmpty()) {
+            sb.append(" JOIN campus camp ON ci.id_campus = camp.id_campus ");
+            sb.append(" JOIN cidade cid ON camp.id_cidade = cid.id_cidade");
+            sb.append(" JOIN estado est ON cid.id_estado = est.id_estado");
+        }
 
-        sb.append(" JOIN estado est ON cid.id_estado = est.id_estado");
-
-        if (modalidade != null && !modalidade.isEmpty()) {
-            sb.append(" WHERE UPPER(ci.modalidade) = '" + modalidade.toUpperCase() + "'");
+        if (modalidade != null && !modalidade.isEmpty() && !Objects.equals(modalidade, "ALL")) {
+            sb.append(" AND UPPER(ci.modalidade) = '" + modalidade.toUpperCase() + "'");
         }
 
         if (estado != null && !estado.isEmpty()) {
-            if (modalidade != null && !modalidade.isEmpty()) {
-                sb.append(" AND UPPER(est.des_estado) = '" + estado.toUpperCase() + "'");
-            } else {
-                sb.append(" WHERE UPPER(est.des_estado) = '" + estado.toUpperCase() + "'");
-            }
+            sb.append(" AND UPPER(est.des_estado) = '" + estado.toUpperCase() + "'");
         }
 
-        Query query = em.createNativeQuery(sb.toString());
+        Query query = em.createNativeQuery(sb.toString().replaceFirst("AND", "WHERE"));
 
         List<Object> list = query.getResultList();
 
         if (list != null && !list.isEmpty()) {
-            return (Long) list.get(0);
+            return (Long) list.getFirst();
         }
 
         return 0L;
     }
-
-
 
     public List<RankingCursos> getRankingCursos(String modalidade, String estado) {
         StringBuilder sb = new StringBuilder();
@@ -63,26 +59,23 @@ public class PesquisasDAO {
         sb.append(" SELECT ci.id_curso, c.des_curso, sum(ano_2022) nmrMatriculados ");
         sb.append(" FROM curso_ies ci ");
         sb.append(" JOIN curso c ON ci.id_curso = c.id_curso ");
-        sb.append(" JOIN cidade cid ON ci.id_cidade = cid.id_cidade ");
+        sb.append(" JOIN campus camp ON camp.id_campus = ci.id_campus ");
+        sb.append(" JOIN cidade cid ON camp.id_cidade = cid.id_cidade ");
         sb.append(" JOIN estado est ON cid.id_estado = est.id_estado ");
 
-        if (modalidade != null && !modalidade.isEmpty()) {
-            sb.append(" WHERE UPPER(ci.modalidade) = '" + modalidade.toUpperCase() + "'");
+        if (modalidade != null && !modalidade.isEmpty() && !Objects.equals(modalidade, "ALL")) {
+            sb.append(" AND UPPER(ci.modalidade) = '" + modalidade.toUpperCase() + "'");
         }
 
         if (estado != null && !estado.isEmpty()) {
-            if (modalidade != null && !modalidade.isEmpty()) {
-                sb.append(" AND UPPER(est.des_estado) = '" + estado.toUpperCase() + "'");
-            } else {
-                sb.append(" WHERE UPPER(est.des_estado) = '" + estado.toUpperCase() + "'");
-            }
+            sb.append(" AND UPPER(est.des_estado) = '" + estado.toUpperCase() + "'");
         }
 
         sb.append(" GROUP BY ci.id_curso, c.des_curso ");
         sb.append(" ORDER BY sum(ano_2022) DESC ");
         sb.append(" LIMIT 10 ");
 
-        Query query = em.createNativeQuery(sb.toString());
+        Query query = em.createNativeQuery(sb.toString().replaceFirst("AND", "WHERE"));
         List<Object[]> results = query.getResultList();
         List<RankingCursos> ranking = new ArrayList<>();
 
